trial/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 10000 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          use_remote_address: true
          codec_type: auto
          stat_prefix: delegate_api
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: iotex_api_service
                  max_grpc_timeout: 0s
              cors:
                allow_origin:
                - "*"
                allow_methods: GET, PUT, DELETE, POST, OPTIONS
                allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout, Authorization
                max_age: "1728000"
                expose_headers: custom-header-1,grpc-status,grpc-message
                enabled: true
          http_filters:
          - name: envoy.grpc_web
          - name: envoy.cors
          - name: envoy.router
  - name: listener_1
    address:
      socket_address: { address: 0.0.0.0, port_value: 18080 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          use_remote_address: true
          codec_type: auto
          stat_prefix: delegate_stats
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: iotex_stats_service
          http_filters:
          - name: envoy.router
  - name: listener_2
    address:
      socket_address: { address: 0.0.0.0, port_value: 14689 }
    filter_chains:
    - filters:
      - name: envoy.tcp_proxy
        config:
          stat_prefix: delegate_p2p
          cluster: iotex_p2p_service
  clusters:
  - name: iotex_api_service
    connect_timeout: 0.25s
    type: STRICT_DNS
    http2_protocol_options: {}
    lb_policy: round_robin
    hosts: [{ socket_address: { address: iotex-golden-gate, port_value: 15015 }}]
  - name: iotex_stats_service
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: round_robin
    hosts: [{ socket_address: { address: iotex, port_value: 8080 }}]
  - name: iotex_p2p_service
    connect_timeout: 0.25s
    type: STRICT_DNS
    http2_protocol_options: {}
    lb_policy: round_robin
    hosts: [{ socket_address: { address: iotex, port_value: 4689 }}]
    circuit_breakers:
      thresholds:
        max_connections: 50
        max_pending_requests: 500
        max_requests: 100
        max_retries: 3
